# tp_c

./: .gitignore  .tests.cpp.swp  .travis.yml  CMakeLists.txt  README.md  input.c  input.h  main.c  main.out  prog  tests.cpp
iz2/: .gitignore  .travis.yml  1  CMakeLists.txt  a.out  mtcounters.c  multy_threads  single_thread  stcounters.c
iz2/cmakebuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  parallel  static
iz2/include/: interface.h  stat.h
iz2/src/: common.c  consistently.c  dyn.c  main.c  parallel.c  stat.c
iz2/tests/: file.txt  tests.cpp
project/include/: applications.h
project/src/: application.c  input.c  main.c
project/test/: .tests.cpp.swo  .tests.cpp.swp  tests.cpp
